// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS - <Editor> render Editor 1`] = `
<span
  style={
    Object {
      "display": "inherit",
    }
  }
>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height={400}
    language="text"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": null,
        "cursorBlinking": null,
        "fontFamily": null,
        "fontLigatures": null,
        "fontSize": null,
        "formatOnPaste": false,
        "lineHeight": null,
        "lineNumbers": null,
        "minimap": Object {
          "enabled": false,
        },
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
      }
    }
    theme={null}
    value="hi"
    width="100%"
  />
</span>
`;

exports[`COMPONENTS - <Editor> render markdown Editor 1`] = `
<EditorWrapper
  style={
    Object {
      "display": "inherit",
    }
  }
>
  <MonacoEditor
    className=""
    defaultValue=""
    editorDidMount={[Function]}
    editorWillMount={[Function]}
    height="auto"
    language="text"
    name="123123123123"
    onChange={[MockFunction]}
    options={
      Object {
        "automaticLayout": true,
        "codeLens": null,
        "cursorBlinking": null,
        "fontFamily": null,
        "fontLigatures": null,
        "fontSize": null,
        "formatOnPaste": false,
        "lineHeight": null,
        "lineNumbers": null,
        "minimap": Object {
          "enabled": false,
        },
        "roundedSelection": false,
        "scrollBeyondLastLine": false,
        "selectOnLineNumbers": false,
      }
    }
    theme={null}
    value="# hi"
    width="50%"
  />
  <MarkdownComponent
    text="# hi"
    width="50%"
  />
</EditorWrapper>
`;
